--- a/.github/workflows/beta_ci.yml
+++ b/.github/workflows/beta_ci.yml
@@ -87,8 +87,8 @@ jobs:
         if: steps.cache-flutter.outputs.cache-hit != 'true'
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 3.3.4
-          channel: any
+          flutter-version-file: pubspec.yaml
+          channel: stable
 
       - name: 下载项目依赖
         run: flutter pub get
@@ -144,7 +144,8 @@ jobs:
         uses: subosito/flutter-action@v2.10.0
         with:
           cache: true
-          flutter-version: 3.3.4
+          flutter-version-file: pubspec.yaml
+          channel: stable
 
       - name: 更新版本号
         id: version
