--- a/.github/workflows/beta_ci.yml
+++ b/.github/workflows/beta_ci.yml
@@ -87,8 +87,9 @@ jobs:
         if: steps.cache-flutter.outputs.cache-hit != 'true'
         uses: subosito/flutter-action@v2
         with:
+          cache: true
           channel: any
-          flutter-version-file: pubspec.yaml 
+          flutter-version: 3.16.5
 
       - name: 下载项目依赖
         run: flutter pub get
@@ -143,8 +144,9 @@ jobs:
         if: steps.cache-flutter.outputs.cache-hit != 'true'
         uses: subosito/flutter-action@v2.10.0
         with:
+          cache: true
           channel: any
-          flutter-version-file: pubspec.yaml 
+          flutter-version: 3.16.5 
 
       - name: 更新版本号
         id: version
